--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "sync-request": "^6.1.0"
+    "express": "^4.17.1"
   }
 }
