--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chatbotgpt",
   "version": "1.0.0",
   "description": "",
-  "main": "node.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node node.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
